fix: fixed overflow and changed background of searchbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   -moz-osx-font-smoothing: grayscale;
   transition: background 0.5s ease-in-out;
   overflow: hidden;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
 }
 
@@ -61,7 +61,8 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
+  margin: 0;
 }
 
 form {
@@ -237,10 +238,10 @@ button:focus-visible {
 .search-input {
   width: 100%;
   padding: 0.75rem 2.5rem 0.75rem 1rem;
-  border: 1px solid #444;
+  border: transparent;
   border-radius: 8px;
-  background-color: rgba(255, 255, 255, 0.1);
-
+  background-color: transparent;
+  cursor: pointer;
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
   background-size: 1.25rem;
@@ -249,7 +250,7 @@ button:focus-visible {
 }
 
 .search-input::placeholder {
-  color: #888;
+  color: #fff;
   font-style: italic;
   opacity: 0.7;
   font-family: "Poppins", sans-serif;
@@ -258,8 +259,7 @@ button:focus-visible {
 /* Optional: Style focus state */
 .search-input:focus {
   outline: none;
-  border-color: #646cff;
-  box-shadow: 0 0 0 2px rgba(100, 108, 255, 0.2);
+
 }
 
 /* Optional: Also hide placeholder when input has value */
@@ -310,6 +310,11 @@ button:focus-visible {
   font-family: "Poppins", sans-serif;
   font-weight: bolder;
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 100%;
+  width: 100%;
 }
 
 .recent-weather-temp {
@@ -423,6 +428,8 @@ button:focus-visible {
   gap: 1.5rem;
   justify-content: center;
   flex-direction: column;
+  width: 15em;
+  height: 10em;
 }
 
 .recent-search-item:focus,
